#45 (bugfix) Align floated form-field' label center

--- a/frontend/src/styles/material-overrides/input.scss
+++ b/frontend/src/styles/material-overrides/input.scss
@@ -54,4 +54,8 @@
     top: -1.37em;
     padding-top: 1.1em;
   }
+
+  .mat-form-field-label {
+    left: 2px;
+  }
 }
